--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
+.parallax{
+  width:100%;
+  height: 100%;
   text-align: center;
+  margin:0px;
+  padding-top:200px;
+ background: url(
+  'https://media.geeksforgeeks.org/wp-content/uploads/20210402175040/back22.jpg');
+  background-attachment: fixed;
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.color{
+  color:black;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.team{
+  /* margin-top: 700px; */
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.style{
+  font-family: verdena;
+  margin-top:700px;
+  margin-bottom: 700px;
+  padding: 40px;
+  color:white;
+  border:4px solid;
+  background-color: black;
 }
-
-.App-link {
-  color: #61dafb;
+.style2{
+  margin:0 auto;
+  
+    width:fit-content;
+  padding: 10px;
+  color:white;
+  border:4px solid;
+  background-color: black;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.style3{
+  font-family: verdena;
+  margin-top:700px;
+ 
+  padding: 40px;
+  color:white;
+  border:4px solid;
+  background-color: black;
+ 
+ 
 }
